--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
 
 .container {
   background: #aeaeb0;
-  width: 100%;
-  height: 100vh;
+  /* width: 100%; */
+  /* height: 100%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,6 +27,7 @@
   border-radius: 5px;
   max-height: 800px;
   overflow-y: auto;
+  margin: 60px 0;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 }
 
@@ -42,7 +43,7 @@
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
   width: 100%;
 }
 
@@ -66,8 +67,6 @@
   width: 350px;
   min-width: 250px;
   padding: 15px 10px 10px 20px;
-
-  margin-right: 10px;
   font-family: "Capriola";
   font-size: 15px;
   color: rgb(78, 76, 76);
@@ -75,7 +74,7 @@
   border: 1px solid #e0e3e4;
   outline: none;
   border-radius: 10px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .buttons {
@@ -95,7 +94,7 @@
   font-family: "Capriola";
   font-size: 14px;
   border-radius: 20px;
-  box-shadow: 0 3px 5px #f35f89;
+  box-shadow: 0 2px 3px #f35f89;
   outline: none;
   cursor: pointer;
 }
@@ -137,7 +136,7 @@
   font-family: "Capriola";
   font-size: 14px;
   border-radius: 20px;
-  box-shadow: 0 3px 5px #f35f89;
+  box-shadow: 0 2px 3px #f35f89;
   outline: none;
   cursor: pointer;
 }
@@ -147,4 +146,37 @@
   text-align: center;
   font-size: 18px;
   margin-top: 20px;
+}
+@media (max-width: 320px) {
+  .header h1 {
+    margin: 20px 10px 30px 10px;
+    font-size: 20px;
+  }
+
+  .app-wrapper {
+    min-width: 300px;
+    height: auto;
+    
+  }
+  .task-input {
+    width: 200px;
+    padding: 15px 10px 10px 20px;
+  }
+
+  .btn {
+    margin: 5px;
+  }
+  .list-item {
+    margin: 10px 0;
+  }
+}
+@media (min-width: 321px) and (max-width: 768px) {
+  .app-wrapper {
+    height:auto;
+    margin: 85px 0;
+  }
+  .header h1 {
+    margin: 20px 10px 30px 10px;
+    font-size: 30px;
+  }
 }
